--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 
 	<body>
 		<!-- all content that shows up on the web page -->
-		<div class="row green"></div>
-		<div class="row">
-			<div class="box light_blue"></div>
-			<div class="box purple"></div>
-			<div class="box red"></div>
-			<div class="box orange"></div>
-		</div>
+		<div class="box green"></div>
+		<div class="box light_blue"></div>
+		<div class="box purple"></div>
+		<div class="box red"></div>
+		<div class="box orange"></div>
 	</body>
 	
 </html>
