--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 		<!-- important information the computer needs -->
 		<meta charset="utf-8">
 		<link href="images/favicon.ico" rel="icon" type="image/x-icon" />
-		<title>Flex v. Block</title>
+		<title>Flex v. Block </title>
 		<link rel="stylesheet" href="style.css" />
 	</head>
 
 	<body>
 		<!-- all content that shows up on the web page -->
-		<div class="box green"></div>
-		<div class="box light_blue"></div>
-		<div class="box purple"></div>
-		<div class="box red"></div>
-		<div class="box orange"></div>
+		<div class="row green"></div>
+		<div class= "row light_blue"></div>
+		<div class="lorow">
+			<div class="box purple"></div>
+			<div class="box red"></div>
+			<div class="box orange"></div>
+		</div>
+		
 	</body>
 	
 </html>
